<resources>
    <string name="app_name">YoutubeApi</string>
    <string name="playlists">playlists</string>
    <string name="image">image</string>
    <string name="try_again">try again</string>
    <string name="back">    Back</string>
    <string name="playlist">playlist</string>
    <string name="fab_button">fab_button</string>
    <string name="desc">In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey.</string>
    <string name="no_internet">No Internet</string>
    <string name="_free_p">460p</string>
    <string name="download">Download</string>
    <string name="two_p">720p</string>
    <string name="one_p">1080p</string>
    <string name="select_video_quality">Select video quality</string>
</resources>